src/CreditCard/CreditCard.css
.card__wrapper {
  width: 76%;
  margin: 0 auto;
  perspective: 800px;
  aspect-ratio: 85.6 / 53.98;
}

@media screen and (min-width: 500px) {
  .card__wrapper {
    width: 350px;
  }
}

.card {
  font-family: CreditCard, sans-serif;
  position: relative;
  width: 100%;
  height: 100%;
  transform-style: preserve-3d;
  transition: transform 0.5s;
  transform-origin: center center;
  transform: rotateX(0);
}

.card__face {
  border-radius: 0.625rem;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
  width: 100%;
  height: 100%;
  position: absolute;
  backface-visibility: hidden;
  display: flex;
  align-items: flex-end;
}

.card__front {
  background: linear-gradient(to bottom right, #23aafb, #0277d1);
  color: #ddd;
}

.card__back {
  background: linear-gradient(to right, #3159cc, #3139ff);
  color: white;
  transform: rotateY(180deg);
  flex-direction: column;
}

.card__content {
  padding: 0 1.5625rem 1.5625rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;

  /* Set a fixed height so that the card number on the backside appears in the same location */
  height: 6.9375rem;
}

.card__number {
  font-size: 1.25rem;
}

.card--flipped {
  animation: flipp 0.5s forwards;
}

.card--flopped {
  animation: flopp 0.5s;
}

@keyframes flipp {
  0% {
    transform: rotateY(0);
  }

  10% {
    transform: rotateY(0) scale(0.85) translateZ(20px);
  }

  90% {
    transform: rotateY(180deg) scale(0.85) translateZ(-20px);
  }

  100% {
    transform: rotateY(180deg);
  }
}

@keyframes flopp {
  00% {
    transform: rotateY(180deg);
  }

  10% {
    transform: rotateY(180deg) scale(0.85) translateZ(20px);
  }

  90% {
    transform: rotateY(0) scale(0.85) translateZ(-20px);
  }

  100% {
    transform: rotateY(0deg);
  }
}

.card__logo {
  width: 4.5rem;
  fill: #fff;
  position: absolute;
  top: 0.625rem;
  right: 1.5625rem;
}

.card__name-expiration-wrapper {
  margin-top: 1.5rem;
  display: flex;
  justify-content: space-between;

  /* Take up space even if empty,
  to prevent card from growing when the user enters name or expiration date */
  height: 2.25rem;
}

.card__name {
  max-width: 240px;
  white-space: nowrap;
  overflow: hidden;
}

.card__label {
  font-size: 0.75rem;
  margin-bottom: 0.25rem;
  font-family: 'Helvetica Neue', 'Arial', sans-serif;
}

.card__expiration-label-wrapper {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.card__expiration-wrapper {
  display: flex;
  justify-content: flex-end;
}

.card__expiration-month,
.card__expiration-year {
  /* Numbers are so much bigger than letters in the creditcard font */
  font-size: 0.6rem;
}

.card__expiration-wrapper > span {
  font-family: 'Helvetica Neue', 'Arial', sans-serif;
  margin: -0.25rem 0.125rem;
}

.card__strips-wrapper {
  width: 100%;
}

.card__magnetic-strip {
  width: 100%;
  height: 1.875rem;
  margin-top: 1.25rem;
  background: #333;
}

.card__signature-strip {
  width: 70%;
  height: 2.1875rem;
  margin-top: 1.25rem;
  margin-left: 0.625rem;
  background: #efefef;
  text-align: right;
  padding: 0.125rem;
}

.card__cvv {
  font-style: italic;
  font-family: 'Helvetica Neue', 'Arial', sans-serif;
  color: #333;
  font-size: 0.875rem;
}

.card__back .card__number,
.card__back .card__name,
.card__back .card__expiration-month,
.card__back .card__expiration-year {
  transform: scale(-1, 1);
  opacity: 0.3;
  color: rgba(10, 60, 150, 0.8);
  text-shadow: 1px 2px 4px #222, 0 0 0 #000, 1px 2px 4px #fff;
}

